# Tensorium-clang-audit

./: .gitignore  CMakeLists.txt  README.md
examples/: sample.cpp
include/TensoriumClangAudit/: Options.hpp  Plugin.hpp  Visitor.hpp
include/TensoriumClangAudit/Clang/: Options.hpp  Plugin.hpp  Visitor.hpp
include/TensoriumClangAudit/Clang/Checks/: AllocationInLoopCheck.hpp  IoInLoopCheck.hpp  MathInLoopCheck.hpp  StlInLoopCheck.hpp  VirtualCallInLoopCheck.hpp
include/TensoriumClangAudit/Clang/Support/: DiagnosticReporter.hpp  SourceUtils.hpp  Suppression.hpp
include/TensoriumClangAudit/LLVM/: Plugin.hpp
include/TensoriumClangAudit/LLVM/Passes/: IRAuditPass.hpp
scripts/: build.sh  run_ir_sample.sh  run_sample.sh  test.sh  test_sample.sh
src/: Plugin.cpp  Visitor.cpp
src/clang/: Plugin.cpp  Visitor.cpp
src/clang/Checks/: AllocationInLoopCheck.cpp  IoInLoopCheck.cpp  MathInLoopCheck.cpp  StlInLoopCheck.cpp  VirtualCallInLoopCheck.cpp
src/clang/Support/: DiagnosticReporter.cpp  SourceUtils.cpp  Suppression.cpp
src/llvm/: Plugin.cpp
src/llvm/Passes/: IRAuditPass.cpp
tests/expected/: alloc_in_loop.txt  io_in_loop.txt  math_in_loop.txt  stl_in_loop.txt  virtual_call_in_loop.txt
tests/fixtures/: alloc_in_loop.cpp  io_in_loop.cpp  math_in_loop.cpp  no_alloc_in_loop.cpp  no_io_in_loop.cpp  no_math_in_loop.cpp  no_stl_in_loop.cpp  no_virtual_call_in_loop.cpp  stl_in_loop.cpp  virtual_call_in_loop.cpp
